fix alignment so it doesn't break links with icons

--- a/polaris-react/src/components/Page/components/Header/Header.scss
+++ b/polaris-react/src/components/Page/components/Header/Header.scss
@@ -191,7 +191,8 @@ $action-menu-rollup-computed-width: 40px;
   display: flex;
   align-content: flex-end;
   flex: 1 1 auto;
-  align-items: baseline;
+  align-items: center;
+  align-self: flex-start;
   justify-content: flex-end;
   margin-left: var(--p-space-4);
   // Necessary for flex to realize this container doesn't want to wrap
